<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activi"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#262626"

    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titlePageLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >
        <TextView android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#ffcc00"
            android:textSize="40dp"
            android:text="@string/title"

            />
        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_weight=".50"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_cancel_black_24dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bodyLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titlePageLayout"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageMovie"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/godfather" />


        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/imageMovie"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/about"
            android:textColor="#ffcc00"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/movieTitleLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutTitle"
            >
            <TextView android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="@string/movieTitle"

                />

            <TextView android:id="@+id/movieTileD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:text="@string/titleMovie"

                tools:ignore="RtlHardcoded" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/originalMovieTitleLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
                android:layout_below="@+id/movieTitleLayout"
            >
            <TextView android:id="@+id/originalMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="@string/originalMovieTitle"

                />

            <TextView android:id="@+id/originalMovieTitleD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:fontFamily="sans-serif"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:text="The god father"
                />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/descriptionLayout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/originalMovieTitleLayout"
        >
        <TextView android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:text="@string/description"

        />

        <TextView android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:text="@string/description"

        />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/descriptionLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShare"
                android:layout_marginLeft="10dp"
                android:layout_weight=".3"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_share_black_24dp"
                android:text="@string/share"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight=".3"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_comment_black_24dp"
            android:text="@string/comment"
            android:textSize="11sp"
            tools:ignore="SmallSp"  />

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight=".3"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_thumb_up_black_24dp"
            android:text="@string/like"
            android:textSize="11sp"
            tools:ignore="SmallSp"  />
            </LinearLayout>
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/commentsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_below="@id/bodyLayout"
        android:background="#a6a6a6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:text="@string/comments"
            android:textColor="#ffffff"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"

            android:background="#262626">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSend"
                android:layout_weight=".1" />

            <ImageView
                android:layout_width="fill_parent"
                android:id="@+id/btnSend"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".9"
                android:src="@drawable/ic_send_black_24dp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>