<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_layout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f1f1f1"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titlePageLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="40dp"
            android:text="@string/title"

            />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_cancel_black_24dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/godfather" />



    <TextView android:id="@+id/titlePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textSize="20dp"
        android:text="@string/about"

        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titlePageLayout3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:id="@+id/movieTile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/movieTitle"

            />

        <TextView android:id="@+id/movieTileD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="15dp"
            android:text="Le parrain"

            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titlePageLayout2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:id="@+id/originalMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/originalMovieTitle"
            />

    </LinearLayout>
    <!--<TextView android:id="@+id/description"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:gravity="left"-->
        <!--android:textStyle="bold"-->
        <!--android:fontFamily="sans-serif"-->
        <!--android:textColor="#000000"-->
        <!--android:textSize="20dp"-->
        <!--android:text="@string/description"-->

        <!--/>-->





</LinearLayout>



